First public release

--- a/pages/options.html
+++ b/pages/options.html
@@ -3,12 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="css/main.css">
+    <title>Demo Monkey Dashboard</title>
 </head>
 
 <body>
     <div id="app" data-app="OptionsPageApp"></div>
     <script src="js/app.js"></script>
-    
+
 </body>
 
 </html>
