--- a/pages/options.html
+++ b/pages/options.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div id="app" data-app="OptionsPageApp"></div>
+    <div id="app" class="app-container" data-app="OptionsPageApp"></div>
     <script src="js/app.js"></script>
 
 </body>
