--- a/pages/popup.html
+++ b/pages/popup.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div id="app" data-app="PopupPageApp"></div>
+    <div id="app" class="app-container" data-app="PopupPageApp"></div>
     <script src="js/app.js"></script>
 </body>
 
