Extended selenium tests

--- a/pages/test.html
+++ b/pages/test.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-  <div>San Francisco</div>
+  <div id="static">San Francisco</div>
   <div id="later"></div>
   <div id="interval"></div>
-  <div>
+  <div id="svg">
     <svg width="800" height="640">
         <g zIndex="1" style="" transform="translate(58,25)">
           <text x="5" zIndex="1" y="18">
