--- a/pages/test.html
+++ b/pages/test.html
@@ -5,6 +5,12 @@
 </head>
 
 <body>
+  <div style="border: 1px solid green">
+    <h1>DemoMonkey Test Page</h1>
+    <div id="monkey-stats">
+
+    </div>
+  </div>
   <div id="static">San Francisco</div>
   <div id="later"></div>
   <div id="interval"></div>
