--- a/pages/popup.html
+++ b/pages/popup.html
@@ -2,12 +2,16 @@
 <html class="popup-app">
 
 <head>
-    <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <div id="app" class="app-container" data-app="PopupPageApp"></div>
-    <script src="js/app.js"></script>
+  <div id="backup-message" class="alert-box">
+    If you see this message, DemoMonkey is broken. You can access your scripts to backup by opening the <a href="backup.html">backup page</a>.
+    <br /> If you want to fix this issue, open the console of the developer toolbar for this page and the background script to check for JavaScript errors.
+  </div>
+  <div id="app" class="app-container" data-app="PopupPageApp"></div>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
