--- a/pages/options.html
+++ b/pages/options.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
   <title>Demo Monkey Dashboard</title>
 </head>
