--- a/pages/options.html
+++ b/pages/options.html
@@ -3,18 +3,20 @@
 
 <head>
   <meta charset="utf-8">
+  <!--<script src="adrum/adrum-custom.js" type="text/javascript" charset="UTF-8"></script>
+  <script src="adrum/adrum.js" type="text/javascript" charset="UTF-8"></script>-->
+  <script src="js/app.js"></script>
   <link rel="stylesheet" href="css/main.css">
   <title>Demo Monkey Dashboard</title>
 </head>
 
 <body>
-  <div id="backup-message"  class="alert-box">
+  <div id="backup-message" class="alert-box">
     If you see this message, DemoMonkey is broken. You can access your scripts to backup by opening the <a href="backup.html">backup page</a>.
-    <br />
-    If you want to fix this issue, open the console of the developer toolbar for this page and the background script to check for JavaScript errors.
+    <br /> If you want to fix this issue, open the console of the developer toolbar for this page and the background script to check for JavaScript errors.
   </div>
   <div id="app" class="app-container" data-app="OptionsPageApp"></div>
-  <script src="js/app.js"></script>
+
 </body>
 
 </html>
