Fixed tests; re-added adrum

--- a/pages/test.html
+++ b/pages/test.html
@@ -12,6 +12,7 @@
 
     </div>
   </div>
+  <div contenteditable id="input"></div>
   <div id="static">San Francisco</div>
   <div id="later"></div>
   <div id="interval"></div>
