--- a/pages/options.html
+++ b/pages/options.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <!--<script src="adrum/adrum-custom.js" type="text/javascript" charset="UTF-8"></script>
-  <script src="adrum/adrum.js" type="text/javascript" charset="UTF-8"></script>-->
+  <script src="adrum/adrum-custom.js" type="text/javascript" charset="UTF-8"></script>
+  <script src="adrum/adrum.js" type="text/javascript" charset="UTF-8"></script>
   <script src="js/app.js"></script>
   <link rel="stylesheet" href="css/main.css">
   <title>Demo Monkey Dashboard</title>
