Changes for Release 1.1.4

--- a/pages/backup.html
+++ b/pages/backup.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="adrum/adrum-custom.js" type="text/javascript" charset="UTF-8"></script>
+  <script src="https://cdn.appdynamics.com/adrum/adrum-latest.js" type="text/javascript" charset="UTF-8"></script>
 </head>
 <body>
   <script src="backup.js"></script>
