--- a/pages/popup.html
+++ b/pages/popup.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/main.css">
+  <script src="adrum/adrum-custom.js" type="text/javascript" charset="UTF-8"></script>
+  <script src="https://cdn.appdynamics.com/adrum/adrum-latest.js" type="text/javascript" charset="UTF-8"></script>
   <script src="js/app.js"></script>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
