Bug fixes, including #34

--- a/pages/backup.html
+++ b/pages/backup.html
@@ -13,7 +13,8 @@
   <ul id="configurations">  </ul>
   <p>
     If your storage is not well-formated, you can edit it here. Please use this with caution!
-    This page will reload, when you click on 'Save Storage'.
+    This page will reload, when you click on 'Save Storage'. Also, you will need to "reset" the extension
+    via the extension manager to get your changes applied.
   </p>
   <div>
     <div><button id="load-storage">Load Storage</button><button id="save-storage" style="display: none">Save Storage</button></div>
