Added UI for CouchDB sync

--- a/pages/options.html
+++ b/pages/options.html
@@ -16,7 +16,7 @@
     <br /> If you want to fix this issue, open the console of the developer toolbar for this page and the background script to check for JavaScript errors.
   </div>
   <div id="app" class="app-container" data-app="OptionsPageApp"></div>
-
+  <div id="message-box" class="fade-to-hidden" style="z-index: 9999; position: absolute; right: 0; bottom: 0; border: 1px solid blue; background: #eeeeff;  margin-right: 20px; margin-bottom: 4px; padding: 4px;">asdf</div>
 </body>
 
 </html>
