Add fixes for text attributes , add colors

--- a/pages/test.html
+++ b/pages/test.html
@@ -17,9 +17,13 @@
 
     </div>
   </div>
-  <div data-label="San Francisco">
-    asdf
-  </div>
+  <table>
+    <tr>
+      <td data-label="San Francisco" />
+        <div>Test</div>
+    </tr>
+  </table>
+  <input type="text" placeholder="San Francisco">
   <div contenteditable id="input"></div>
   <h2 id="ajax">AJAX</h2>
   <div id="static">San Francisco</div>
