Delete all configs option, some early code for google drive sync

--- a/pages/background.html
+++ b/pages/background.html
@@ -4,5 +4,6 @@
   <meta charset="utf-8">
 </head>
 <body>
+  <!--<script src="https://apis.google.com/js/client.js?onload=onGAPILoad"></script>-->
   <script src="js/background.js"></script>
 </body>
