--- a/pages/template.html
+++ b/pages/template.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title><%= htmlWebpackPlugin.options.title %></title>
+<% if (htmlWebpackPlugin.options.background) { %>
+  <script src="https://apis.google.com/js/client.js?onload=onGAPILoad"></script>
+<% } %>
 </head>
 <body>
 <% if (htmlWebpackPlugin.options.appname) { %>
